change db and Schemas

--- a/tribute/front/src/bladerunner/bladecss.css
+++ b/tribute/front/src/bladerunner/bladecss.css
@@ -1,9 +1,11 @@
 @font-face{
   font-family:'BladeRunnerFont';
   src: url('BladeRunnerFont.ttf');
+
 }
 h1{
   font-family: BladeRunnerFont;
+  color: red;
 }
 body{
   margin: 0;
